tekton/backend/oc_manifests/deploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: test-observai-persistance-api 
  namespace: observai-pipeline
  labels:
      app.kubernetes.io/part-of: observai
      app.openshift.io/runtime: quarkus
spec:
  strategy:
    type: Rolling
    rollingParams:
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
  triggers:
    - type: ConfigChange
  replicas: 1
  selector:
      app: test-observai-persistance-api 
      deploymentconfig: test-observai-persistance-api
  template:
    metadata:
      labels:
        app: test-observai-persistance-api
        deploymentconfig: test-observai-persistance-api
    spec:
      imagePullSecrets:
        - name: sharanya-pull-secret
      containers:
        - name: test-observai-persistance-api
          image: >-
            quay.io/zagaos/test-observai-persistance-api
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      securityContext: {}
