tekton/backend/oc_manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: observai-backend
  namespace: observai-pipeline
spec:
  selector:
    app: observai-persistance-api
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
