tekton/backend/oc_manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: observai-persistance-api
spec:
  to:
    kind: Service
    name: observai-backend
